Optimised `test_register_read_and_write` closes #243

--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -274,112 +274,8 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
         """
         rut: Reg
         {% for node in owned_elements.registers -%}
-        # test access operations (read and/or write) to register:
-        # {{'.'.join(node.get_path_segments())}}
         with self.subTest(msg='register: {{'.'.join(node.get_path_segments())}}'):
-            rut=self.dut.{{'.'.join(get_python_path_segments(node))}} # type: ignore[union-attr,assignment]
-        with patch.object(self,'write_callback') as write_callback_mock, \
-            patch.object(self,'read_callback', return_value=1) as read_callback_mock:
-
-                {% if node.has_sw_readable -%}
-                {% if asyncoutput %}
-                if not isinstance(rut, (RegAsyncReadOnly, RegAsyncReadWrite)):
-                    raise TypeError('Register is not a Readable Async Type')
-                {% else %}
-                if not isinstance(rut, (RegReadOnly, RegReadWrite)):
-                    raise TypeError('Register is not a Readable Type')
-                {% endif %}
-                # test reading back 1 (the unpatched version returns 0 so this confirms the patch works)
-                self.assertEqual({% if asyncoutput %}await {%endif %}rut.read(), 1)
-                read_callback_mock.assert_called_once_with(
-                                    addr={{node.absolute_address}},
-                                    width={{node.size * 8}},
-                                    accesswidth=rut.accesswidth)
-
-                # test the read check with high value
-                read_callback_mock.reset_mock()
-                read_callback_mock.return_value = {{get_reg_max_value_hex_string(node)}}
-                self.assertEqual({% if asyncoutput %}await {%endif %}rut.read(), {{get_reg_max_value_hex_string(node)}})
-                read_callback_mock.assert_called_once_with(
-                                    addr={{node.absolute_address}},
-                                    width={{node.size * 8}},
-                                    accesswidth=rut.accesswidth)
-
-                # test the read of the low value
-                read_callback_mock.reset_mock()
-                read_callback_mock.return_value = 0
-                self.assertEqual({% if asyncoutput %}await {%endif %}rut.read(), 0x0)
-                read_callback_mock.assert_called_once_with(
-                                    addr={{node.absolute_address}},
-                                    width={{node.size * 8}},
-                                    accesswidth=rut.accesswidth)
-
-                # test the read of a random value
-                random_value = random.randrange(0, {{get_reg_max_value_hex_string(node)}}+1)
-                read_callback_mock.reset_mock()
-                read_callback_mock.return_value = random_value
-                self.assertEqual({% if asyncoutput %}await {%endif %}rut.read(), random_value)
-                read_callback_mock.assert_called_once_with(
-                                    addr={{node.absolute_address}},
-                                    width={{node.size * 8}},
-                                    accesswidth=rut.accesswidth)
-
-                # at the end of the read tests the write should not have been called
-                read_callback_mock.reset_mock()
-                write_callback_mock.assert_not_called()
-                {% endif %}
-
-                {% if node.has_sw_writable -%}
-                {% if asyncoutput %}
-                if not isinstance(rut, (RegAsyncWriteOnly, RegAsyncReadWrite)):
-                    raise TypeError('Register is not a Writeable Async Type')
-                {% else %}
-                if not isinstance(rut, (RegWriteOnly, RegReadWrite)):
-                    raise TypeError('Register is not a Writeable Type')
-                {% endif %}
-                # test the write with high value
-                {% if asyncoutput %}await {%endif %}rut.write({{get_reg_max_value_hex_string(node)}})
-                write_callback_mock.assert_called_once_with(
-                                    addr={{node.absolute_address}},
-                                    width={{node.size * 8}},
-                                    accesswidth=rut.accesswidth,
-                                    data={{get_reg_max_value_hex_string(node)}})
-                write_callback_mock.reset_mock()
-
-                # test the write of a low value
-                {% if asyncoutput %}await {%endif %}rut.write(0)
-                write_callback_mock.assert_called_once_with(
-                                    addr={{node.absolute_address}},
-                                    width={{node.size * 8}},
-                                    accesswidth=rut.accesswidth,
-                                    data=0)
-                write_callback_mock.reset_mock()
-
-                # test the write of a random
-                random_value = random.randrange(0, {{get_reg_max_value_hex_string(node)}}+1)
-                {% if asyncoutput %}await {%endif %}rut.write(random_value)  # type: ignore[union-attr]
-                write_callback_mock.assert_called_once_with(
-                                    addr={{node.absolute_address}},
-                                    width={{node.size * 8}},
-                                    accesswidth=rut.accesswidth,
-                                    data=random_value)
-                write_callback_mock.reset_mock()
-
-                # test writing a value beyond the register range is blocked with an exception being raised
-                with self.assertRaises(ValueError):
-                    {% if asyncoutput %}await {%endif %}rut.write(-1)
-
-                with self.assertRaises(ValueError):
-                    {% if asyncoutput %}await {%endif %}rut.write({{get_reg_max_value_hex_string(node)}}+1)
-
-                {%- else %}
-                # test that a non-writable register has no write method and attempting one generates and error
-                with self.assertRaises(AttributeError):
-                    {% if asyncoutput %}await {%endif %}rut.write(0) # type: ignore[attr-defined]
-                {%- endif %}
-
-                # check the read has not been called in the write test
-                read_callback_mock.assert_not_called()
+            {% if asyncoutput %}await {%endif %}self._single_register_read_and_write_test(rut=self.dut.{{'.'.join(get_python_path_segments(node))}}, has_sw_readable={{node.has_sw_readable}}, has_sw_writable={{node.has_sw_writable}})
         {% endfor %}
 
     {% if asyncoutput %}async {% endif %}def test_int_field_read_and_write(self) -> None:
