--- a/src/peakrdl_python/templates/baseclass_tb.py.jinja
+++ b/src/peakrdl_python/templates/baseclass_tb.py.jinja
@@ -44,6 +44,7 @@ from {{ peakrdl_python_lib(depth=lib_depth) }} import NormalCallbackSet, NormalC
 
 
 from ..reg_model import RegModel
+from ..sim import Simulator
 {% if asyncoutput %}
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_dummy_read as read_addr_space
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_dummy_write as write_addr_space
@@ -92,7 +93,14 @@ def random_enum_reg_value(enum_class: type[{% if legacy_enum_type %}IntEnum{% el
 
 class {{top_node.inst_name}}_TestCase(TestCaseBase): # type: ignore[valid-type,misc]
 
+    {% if asyncoutput %}async {% endif %}def read_callback(self, addr: int, width: int, accesswidth: int) -> int:
+        return {% if asyncoutput %}await {% endif %}self.sim.read(addr=addr, width=width, accesswidth=accesswidth)
+
+    {% if asyncoutput %}async {% endif %}def write_callback(self, addr: int, width: int, accesswidth: int,  data: int) -> None:
+        return {% if asyncoutput %}await {% endif %}self.sim.write(addr=addr, width=width, accesswidth=accesswidth, data=data)
+
     def setUp(self) -> None:
+        self.sim = Simulator(address=0)
         self.dut = RegModel(callbacks={% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}{% if legacy_block_access %}Legacy{% endif %}(read_callback=self.outer_read_callback,
                                                           write_callback=self.outer_write_callback))
 
@@ -109,6 +117,7 @@ class {{top_node.inst_name}}_TestCase_AltBlockAccess(BlockTestBase): # type: ign
     Based test to use with the alternative call backs, this allow the legacy output API to be tested
     with the new callbacks and visa versa.
     """
+
 
     def setUp(self) -> None:
         self.dut = RegModel(callbacks={% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}{% if not legacy_block_access %}Legacy{% endif %}(
