--- a/src/peakrdl_python/templates/baseclass_tb.py.jinja
+++ b/src/peakrdl_python/templates/baseclass_tb.py.jinja
@@ -45,6 +45,7 @@ from {{ peakrdl_python_lib(depth=lib_depth) }} import NormalCallbackSet, NormalC
 
 from ..reg_model import RegModel
 from ..sim import Simulator
+from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.simulator import BaseSimulator
 {% if asyncoutput %}
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_dummy_read as read_addr_space
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.dummy_callbacks import async_dummy_write as write_addr_space
@@ -98,6 +99,10 @@ class {{top_node.inst_name}}_TestCase(TestCaseBase): # type: ignore[valid-type,m
 
     {% if asyncoutput %}async {% endif %}def write_callback(self, addr: int, width: int, accesswidth: int,  data: int) -> None:
         return {% if asyncoutput %}await {% endif %}self.sim.write(addr=addr, width=width, accesswidth=accesswidth, data=data)
+
+    @property
+    def simulator_instance(self) -> BaseSimulator:
+        return self.sim
 
     def setUp(self) -> None:
         self.sim = Simulator(address=0)
