--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -200,7 +200,9 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
         {% for node in owned_elements.registers -%}
         with self.subTest(msg='register: {{'.'.join(node.get_path_segments())}}'):
             self._single_register_property_test(rut=self.dut.{{'.'.join(get_python_path_segments(node))}}, address={{node.absolute_address}}, width={{node.size * 8}}, accesswidth={% if 'accesswidth' in node.list_properties() -%}{{node.get_property('accesswidth')}}{% else %}None{%- endif %})
-            {% if asyncoutput %}await {%endif %}self._single_register_read_and_write_test(rut=self.dut.{{'.'.join(get_python_path_segments(node))}}, has_sw_readable={{node.has_sw_readable}}, has_sw_writable={{node.has_sw_writable}})
+            {% if asyncoutput %}await {%endif %}self._single_register_read_and_write_test(rut=self.dut.{{'.'.join(get_python_path_segments(node))}}, has_sw_readable={{node.has_sw_readable}}, has_sw_writable={{node.has_sw_writable}},
+                                                                                          readable_fields=set([ {%- for child_node in node.children(unroll=True) -%}{%- if not hide_node_func(child_node) -%}{% if isinstance(child_node, systemrdlFieldNode) %}{% if child_node.is_sw_readable %}'{{child_node.inst_name}}',{% endif %}{% endif %}{% endif %}{% endfor %} ]),
+                                                                                          writeable_fields=set([ {%- for child_node in node.children(unroll=True) -%}{%- if not hide_node_func(child_node) -%}{% if isinstance(child_node, systemrdlFieldNode) %}{% if child_node.is_sw_writable %}'{{child_node.inst_name}}',{% endif %}{% endif %}{% endif %}{% endfor %} ]) )
         {% endfor %}
 
     {% if asyncoutput %}async {% endif %}def test_field(self) -> None:
@@ -548,70 +550,18 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
         Walk the address map and check that the iterators for each node as as expected
         """
         {% if asyncoutput %}
-        expected_writable_fields: list[Union[FieldAsyncWriteOnly, FieldAsyncReadWrite]]
-        expected_readable_fields: list[Union[FieldAsyncReadOnly, FieldAsyncReadWrite]]
-        expected_fields: list[Union[FieldAsyncWriteOnly, FieldAsyncReadOnly, FieldAsyncReadWrite]]
         expected_writable_regs: list[WritableAsyncRegister]
         expected_readable_regs: list[ReadableAsyncRegister]
         expected_memories:list[Union[MemoryAsyncReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryAsyncReadWrite{% if legacy_block_access %}Legacy{% endif %}]]
 
         {% else %}
-        expected_writable_fields: list[Union[FieldWriteOnly, FieldReadWrite]]
-        expected_readable_fields: list[Union[FieldReadOnly, FieldReadWrite]]
-        expected_fields: list[Union[FieldWriteOnly, FieldReadOnly, FieldReadWrite]]
         expected_writable_regs: list[WritableRegister]
         expected_readable_regs: list[ReadableRegister]
         expected_memories:list[Union[MemoryReadOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryWriteOnly{% if legacy_block_access %}Legacy{% endif %}, MemoryReadWrite{% if legacy_block_access %}Legacy{% endif %}]]
         {% endif %}
         expected_sections : list[Union[{% if asyncoutput %}Async{% endif %}AddressMap, {% if asyncoutput %}Async{% endif %}RegFile]]
 
-        # test all the registers
-        {% for node in owned_elements.registers -%}
-        with self.subTest(msg='register: {{'.'.join(node.get_path_segments())}}'):
-                {# a register can only have fields beneath it #}
-            expected_fields = [ {%- for child_node in node.children(unroll=True) -%}
-                                    {% if isinstance(child_node, systemrdlFieldNode) %}
-                                        {%- if not hide_node_func(child_node) -%}
-                                    self.dut.{{'.'.join(get_python_path_segments(child_node))}}, # type: ignore[union-attr,list-item]
-                                        {% endif %}
-                                    {% endif %}
-                                 {% endfor %}
-                                         ]
-            fields = []
-            for field in self.dut.{{'.'.join(get_python_path_segments(node))}}.fields:  # type: ignore[union-attr]
-                fields.append(field)
-            self.assertCountEqual(expected_fields, fields)
-                {% if node.has_sw_writable %}
-            expected_writable_fields = [ {%- for child_node in node.children(unroll=True) -%}
-                                            {%- if not hide_node_func(child_node) -%}
-                                         {% if isinstance(child_node, systemrdlFieldNode) %}{% if child_node.is_sw_writable %}self.dut.{{'.'.join(get_python_path_segments(child_node))}}, # type: ignore[union-attr,list-item] {% endif %}{% endif %}
-                                            {% endif %}
-                                         {% endfor %}
-                                         ]
-            writable_fields = []
-            for writable_field in self.dut.{{'.'.join(get_python_path_segments(node))}}.writable_fields:  # type: ignore[union-attr]
-                writable_fields.append(writable_field)
-            self.assertCountEqual(expected_writable_fields, writable_fields)
-                    {% else %}
-            # register should not have writable_fields attribute
-            self.assertFalse(hasattr(self.dut.{{'.'.join(get_python_path_segments(node))}}, 'writable_fields')) # type: ignore[union-attr]
-                    {% endif %}
-                    {% if node.has_sw_readable %}
-            expected_readable_fields = [ {%- for child_node in node.children(unroll=True) -%}
-                                            {%- if not hide_node_func(child_node) -%}
-                                         {% if isinstance(child_node, systemrdlFieldNode) %}{% if child_node.is_sw_readable %}self.dut.{{'.'.join(get_python_path_segments(child_node))}}, # type: ignore[union-attr,list-item] {% endif %}{% endif %}
-                                            {% endif %}
-                                         {% endfor %}
-                                         ]
-            readable_fields = []
-            for readable_field in self.dut.{{'.'.join(get_python_path_segments(node))}}.readable_fields: # type: ignore[union-attr]
-                readable_fields.append(readable_field)
-            self.assertCountEqual(expected_readable_fields, readable_fields)
-                    {% else %}
-            # register should not have readable_fields attribute
-            self.assertFalse(hasattr(self.dut.{{'.'.join(get_python_path_segments(node))}}, 'readable_fields')) # type: ignore[union-attr]
-                    {% endif %}
-        {% endfor %}
+
         # test all the memories
         {% for node in owned_elements.memories -%}
 
