Fix problem with type checks on Python 3.9

--- a/src/peakrdl_python/templates/addrmap_simulation_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_simulation_tb.py.jinja
@@ -40,7 +40,7 @@ from enum import IntEnum
 {% endif %}
 
 from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.register import Register,MemoryRegister
-from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.field import Field
+from {{ peakrdl_python_sim_lib(depth=lib_depth) }}.field import ReadOnlyField, WriteOnlyField, ReadWriteField
 
 from ._{{top_node.inst_name}}_sim_test_base import {{top_node.inst_name}}_SimTestCase, {{top_node.inst_name}}_SimTestCase_BlockAccess
 from ._{{top_node.inst_name}}_sim_test_base import __name__ as base_name
@@ -129,7 +129,13 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             sim_register = self.sim.register_by_full_name('{{'.'.join(node.parent.get_path_segments())}}')
             self.assertIsInstance(sim_register, (Register,MemoryRegister))
             sim_field = self.sim.field_by_full_name('{{'.'.join(node.get_path_segments())}}')
-            self.assertIsInstance(sim_field, Field)
+            {% if node.is_sw_readable and node.is_sw_writable -%}
+            self.assertIsInstance(sim_field, ReadWriteField)
+            {% elif node.is_sw_readable and not node.is_sw_writable -%}
+            self.assertIsInstance(sim_field, ReadOnlyField)
+            {% elif not node.is_sw_readable and node.is_sw_writable -%}
+            self.assertIsInstance(sim_field, WriteOnlyField)
+            {% endif %}
             register_read_callback = Mock()
             register_write_callback = Mock()
             field_read_callback = Mock()
